--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* HEADER  */
+
+/* top-nav  */
 .top-nav {
     background-color: #2c3e50;
     color: white;
@@ -14,3 +17,9 @@
     text-align: right;
     line-height: 40px;
 }
+/* end top nav  */
+
+/* jumbotron  */
+
+/* end jumbotron  */
+/* END HEADER  */
