--- a/css/style.css
+++ b/css/style.css
@@ -127,5 +127,26 @@
 /* END MAIN  */
 
 /* FOOTER  */
+footer {
+    background-color: #3a546d;
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+}
 
+.footer-content-col {
+    padding-top: 20px;
+}
+
+footer li {
+    display: inline-block;
+    padding-right: 10px;
+}
+
+.bottom-footer {
+    background-color: #2c3e50;
+    width: 100%;
+    height: 80px;
+    padding-top: 40px;
+}
 /* END FOOTER  */
