--- a/css/style.css
+++ b/css/style.css
@@ -177,17 +177,35 @@ footer {
 
 .footer-content-col {
     padding-top: 20px;
+    text-align: center;
 }
 
-footer li {
+.social {
+    padding: 0;
+}
+
+.social li {
     display: inline-block;
-    padding-right: 10px;
+    padding-right: 5px;
+}
+
+.social li a {
+    color: white;
+    font-size: 15px;
+}
+
+.social i {
+    width: 35px;
+    height: 35px;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 8px
 }
 
 .bottom-footer {
     background-color: #2c3e50;
     width: 100%;
     height: 80px;
-    padding-top: 40px;
+    padding-top: 30px;
 }
 /* END FOOTER  */
