--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ footer {
 .bottom-footer {
     background-color: #2c3e50;
     width: 100%;
-    height: 80px;
-    padding-top: 30px;
+    padding: 30px 0;
+    
 }
 /* END FOOTER  */
